Refactor: test dummy data